<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/dark_background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:text="@string/button_zero"
        android:textSize="80sp"
        android:padding="20dp"
        android:gravity="end|bottom"
        android:background="@color/dark_display"
        android:textColor="@color/white"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button style="@style/CalculatorButton" android:id="@+id/btnAC" android:text="@string/button_ac" app:backgroundTint="@color/function_button_color" android:textColor="@color/black" />
        <Button style="@style/CalculatorButton" android:id="@+id/btnDivide" android:text="@string/button_divide" app:backgroundTint="@color/operator_button_color" />
        <Button style="@style/CalculatorButton" android:id="@+id/btnMultiply" android:text="@string/button_multiply" app:backgroundTint="@color/operator_button_color" />
        <Button style="@style/CalculatorButton" android:id="@+id/btnMinus" android:text="@string/button_minus" app:backgroundTint="@color/operator_button_color" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <Button style="@style/CalculatorButton" android:id="@+id/btnSeven" android:text="@string/button_seven" app:backgroundTint="@color/number_button_color" />
        <Button style="@style/CalculatorButton" android:id="@+id/btnEight" android:text="@string/button_eight" app:backgroundTint="@color/number_button_color" />
        <Button style="@style/CalculatorButton" android:id="@+id/btnNine" android:text="@string/button_nine" app:backgroundTint="@color/number_button_color" />
        <Button style="@style/CalculatorButton" android:id="@+id/btnPlus" android:text="@string/button_plus" app:backgroundTint="@color/operator_button_color" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <Button style="@style/CalculatorButton" android:id="@+id/btnFour" android:text="@string/button_four" app:backgroundTint="@color/number_button_color" />
        <Button style="@style/CalculatorButton" android:id="@+id/btnFive" android:text="@string/button_five" app:backgroundTint="@color/number_button_color" />
        <Button style="@style/CalculatorButton" android:id="@+id/btnSix" android:text="@string/button_six" app:backgroundTint="@color/number_button_color" />
        <Button style="@style/CalculatorButton" android:id="@+id/btnEquals" android:text="@string/button_equals" app:backgroundTint="@color/equal_button_color" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <Button style="@style/CalculatorButton" android:id="@+id/btnOne" android:text="@string/button_one" app:backgroundTint="@color/number_button_color" />
        <Button style="@style/CalculatorButton" android:id="@+id/btnTwo" android:text="@string/button_two" app:backgroundTint="@color/number_button_color" />
        <Button style="@style/CalculatorButton" android:id="@+id/btnThree" android:text="@string/button_three" app:backgroundTint="@color/number_button_color" />
        <Button style="@style/CalculatorButton" android:id="@+id/btnZero" android:text="@string/button_zero" app:backgroundTint="@color/number_button_color" />
        <Button style="@style/CalculatorButton" android:id="@+id/btnDecimal" android:text="@string/button_decimal" app:backgroundTint="@color/number_button_color" />
    </LinearLayout>

</LinearLayout>